--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "treinando-redux",
+  "name": "marvel-wiki",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.3",
+    "axios": "^0.21.1",
+    "md5": "^2.3.0",
+    "paginate-array": "^2.1.0",
+    "polished": "^4.1.3",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-lottie": "^1.2.3",
+    "react-modal": "^3.14.3",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
